bad/bin_op_le_bool_bool.example_compiler_output
ERROR
[1mbad/bin_op_le_bool_bool.lat:3:7: [1;31merror: [0;1moperator <= is defined only for int values and string values, not `boolean` and `boolean`[m
	true <= true;
	     [1;32m^[m
